[package]
name = "okpo"
version = "0.1.0"
edition = "2024"

[dependencies]
# Легковесный асинхронный рантайм
tokio = { version = "1", features = ["full"] }
# Современный чистый Rust-клиент SSH (без Си-зависимостей)
russh = { version = "0.62", default-features = false, features = ["ring"] }
# Расширение для работы с SCP протоколом
russh-sftp = "2.3"
futures-util = "0.3"
