[package]
name = "okpo"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
russh = { version = "0.62", default-features = false, features = ["ring", "rsa"] }
russh-sftp = "2.3"
chrono = "0.4"
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
